@@ -27,7 +27,7 @@ use strict;
 use warnings FATAL => 'all';
 
 # ###########################################################################
-# MySQLFind package 1484
+# MySQLFind package 1574
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -103,9 +103,29 @@ sub find_tables {
    return map { $_->{name} } @tables;
 }
 
+sub _use_db {
+   my ( $self, $dbh, $new ) = @_;
+   if ( !$new ) {
+      $ENV{MKDEBUG} && _d('No new DB to use');
+      return;
+   }
+   my $sql = 'SELECT DATABASE()';
+   $ENV{MKDEBUG} && _d($sql);
+   my $curr = $dbh->selectrow_array($sql);
+   if ( $curr && $new && $curr eq $new ) {
+      $ENV{MKDEBUG} && _d('Current and new DB are the same');
+      return $curr;
+   }
+   $sql = 'USE ' . $self->{quoter}->quote($new);
+   $ENV{MKDEBUG} && _d($sql);
+   $dbh->do($sql);
+   return $curr;
+}
+
 sub _fetch_tbl_list {
    my ( $self, %args ) = @_;
    die "database is required" unless $args{database};
+   my $curr_db = $self->_use_db($self->{dbh}, $args{database});
    my $need_engine = $self->{engines}->{permit}
         || $self->{engines}->{reject}
         || $self->{engines}->{regexp};
@@ -161,6 +181,7 @@ sub _fetch_tbl_list {
       }
       return @result;
    }
+   $self->_use_db($args{dbh}, $curr_db);
 }
 
 sub _filter {
@@ -797,7 +818,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableParser package 1348
+# TableParser package 1561
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -934,7 +955,7 @@ sub find_best_index {
          ($best) = $self->sort_indexes($tbl);
       }
    }
-   $ENV{MKDEBUG} && _d("Best index found is " . ($index || 'undef'));
+   $ENV{MKDEBUG} && _d("Best index found is " . ($best || 'undef'));
    return $best;
 }
 
@@ -1020,7 +1041,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# MySQLDump package 1484
+# MySQLDump package 1574
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1115,6 +1136,25 @@ sub dump {
    }
 }
 
+sub _use_db {
+   my ( $self, $dbh, $quoter, $new ) = @_;
+   if ( !$new ) {
+      $ENV{MKDEBUG} && _d('No new DB to use');
+      return;
+   }
+   my $sql = 'SELECT DATABASE()';
+   $ENV{MKDEBUG} && _d($sql);
+   my $curr = $dbh->selectrow_array($sql);
+   if ( $curr && $new && $curr eq $new ) {
+      $ENV{MKDEBUG} && _d('Current and new DB are the same');
+      return $curr;
+   }
+   $sql = 'USE ' . $quoter->quote($new);
+   $ENV{MKDEBUG} && _d($sql);
+   $dbh->do($sql);
+   return $curr;
+}
+
 sub get_create_table {
    my ( $self, $dbh, $quoter, $db, $tbl ) = @_;
    if ( !$self->{tables}->{$db}->{$tbl} ) {
@@ -1124,9 +1164,11 @@ sub get_create_table {
          . '@@SQL_QUOTE_SHOW_CREATE := 1 */';
       $ENV{MKDEBUG} && _d($sql);
       $dbh->do($sql);
+      my $curr_db = $self->_use_db($dbh, $quoter, $db);
       $sql = "SHOW CREATE TABLE " . $quoter->quote($db, $tbl);
       $ENV{MKDEBUG} && _d($sql);
       my $href = $dbh->selectrow_hashref($sql);
+      $self->_use_db($dbh, $quoter, $curr_db);
       $sql = '/*!40101 SET @@SQL_MODE := @OLD_SQL_MODE, '
          . '@@SQL_QUOTE_SHOW_CREATE := @OLD_QUOTE */';
       $ENV{MKDEBUG} && _d($sql);
@@ -1149,9 +1191,11 @@ sub get_columns {
    my ( $self, $dbh, $quoter, $db, $tbl ) = @_;
    $ENV{MKDEBUG} && _d("Get columns for $db.$tbl");
    if ( !$self->{columns}->{$db}->{$tbl} ) {
+      my $curr_db = $self->_use_db($dbh, $quoter, $db);
       my $sql = "SHOW COLUMNS FROM " . $quoter->quote($db, $tbl);
       $ENV{MKDEBUG} && _d($sql);
       my $cols = $dbh->selectall_arrayref($sql, { Slice => {} });
+      $self->_use_db($dbh, $quoter, $curr_db);
       $self->{columns}->{$db}->{$tbl} = [
          map {
             my %row;
